[package]
name = "rustbot"
version = "0.1.2"
authors = ["hyperchessbot <hyperchessbot@gmail.com>"]
edition = "2018"
keywords = ["rust", "lichess", "bot"]
license = "MIT"
description = "Lichess bot implementing the https://lichess.org/api#tag/Bot API, written in Rust."
repository = "https://github.com/hyperchessbot/rustbot"
homepage = "https://github.com/hyperchessbot/rustbot#rustbot"
readme = "README.md"

[dependencies]
lichessbot = "0.1.20"
env_logger = "0.8.2"

[dependencies.tokio]
version = "1.0.1"
features = ["full"]

[[bin]]
name = "rustbot"
path = "src/main.rs"
